<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1C1C1C"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".SwipingActivity" >

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="87dp"
        android:gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/dislike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/custom_signup_button"
            android:text="Dislike"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:background="@color/cardview_dark_background"
            android:text="Refresh"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/custom_signup_button"
            android:text="Like"

            android:textColor="#FFFFFF" />
    </LinearLayout>

    <com.lorentzos.flingswipe.SwipeFlingAdapterView
        android:id="@+id/swipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/line1"
        app:rotation_degrees="15.0"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        app:menu="@menu/menu_navigation"
        app:labelVisibilityMode="labeled"
        app:itemBackground="@android:color/transparent"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        android:background="#7E484848" />


</RelativeLayout>

