<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1C1C1C"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/custom_signup_button"
        android:text="Log In"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/login_input_username"
        android:layout_width="match_parent"
        android:layout_height="48dp"

        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custom_white_text_field"
        android:hint="Enter Email"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginText" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/login_input_password"
        android:layout_width="match_parent"

        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custom_white_text_field"
        android:hint="Enter Password"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_input_username" />

    <Button
        android:id="@+id/login_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_button"
        android:text="back"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_forgot_password"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="120dp"
        android:background="@drawable/custom_button"
        android:text="Forgot Password?"
        android:textColor="#3d3d3d"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_input_password" />

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Log In"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="170dp"
        android:layout_height="49dp"
        android:layout_marginStart="163dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="176dp"
        android:text=""
        android:textAlignment="center"
        android:textColor="#FF0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_forgot_password" />

    <TextView
        android:id="@+id/text_get_response"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="36dp"
        android:text="Response will appear here"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>