<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group>
    <item
        android:id="@+id/friends"
        android:title="Friends"
        android:icon="@drawable/ic_friends"/>
    <item
        android:id="@+id/events"
        android:title="Events"
        android:icon="@drawable/ic_events"/>
    <item
        android:id="@+id/swiping"
        android:title="Swiping"
        android:icon="@android:drawable/ic_media_play"/>
    <item
        android:id="@+id/leaderboard"
        android:title="Leaderboard"
        android:icon="@drawable/ic_leaderboards"/>
    <item
        android:id="@+id/profile"
        android:title="Profile"
        android:icon="@drawable/ic_profile"/>
</group>
</menu>

